--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,12 @@ dependencies:
   cached_network_image: ^3.3.0
   flutter_spinkit: ^5.2.0
   dotted_border: ^2.1.0
+  logger: ^2.4.0
+  file_picker: ^8.0.0+1
+  screenshot: ^2.4.0
+  path_provider: ^2.1.4
+  pdf: ^3.11.1
+
   
 
 dev_dependencies:
