--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -53,19 +53,15 @@ dependencies:
   pdf: ^3.11.1
   pin_code_fields: ^7.4.0
   
+  
 
   
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-
-  # The "flutter_lints" package below contains a set of recommended lints to
-  # encourage good coding practices. The lint set provided by the package is
-  # activated in the `analysis_options.yaml` file located at the root of your
-  # package. See that file for information about deactivating specific lint
-  # rules and activating additional ones.
   flutter_lints: ^2.0.0
+  flutter_launcher_icons: ^0.13.1
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
@@ -115,6 +111,11 @@ flutter:
       fonts: 
         - asset: assets/fonts/MontserratAlternates-Regular.ttf
           weight: 900
+
+flutter_launcher_icons:
+  android: "launcher_icon"
+  image_path: "assets/images/business_logo.png"
+  min_sdk_android: 21       
 
 
           
