--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -94,23 +94,67 @@ flutter:
   fonts:
     - family: Montserrat
       fonts:
-        - asset: assets/fonts/Montserrat-Black.ttf
-        - asset: assets/fonts/Montserrat-Italic-VariableFont_wght.ttf
-        - asset: assets/fonts/Montserrat-Light.ttf
-        - asset: assets/fonts/Montserrat-Regular.ttf
-        - asset: assets/fonts/Montserrat-SemiBold.ttf
-        - asset: assets/fonts/Montserrat-VariableFont_wght.ttf
+        - asset: assets/fonts/montserrat/Montserrat-Black.ttf
+          weight: 900
+        - asset: assets/fonts/montserrat/Montserrat-Bold.ttf
+          weight: 700
+        - asset: assets/fonts/montserrat/Montserrat-ExtraBold.ttf
+          weight: 800
+        - asset: assets/fonts/montserrat/Montserrat-Light.ttf
+          weight: 300
+        - asset: assets/fonts/montserrat/Montserrat-ExtraLight.ttf
+          weight: 200
+        - asset: assets/fonts/montserrat/Montserrat-Regular.ttf
+          weight: 400
+        - asset: assets/fonts/montserrat/Montserrat-SemiBold.ttf
+          weight: 600
+        - asset: assets/fonts/montserrat/Montserrat-VariableFont_wght.ttf
+        - asset: assets/fonts/montserrat/Montserrat-Medium.ttf
+          weight: 500
+        - asset: assets/fonts/montserrat/Montserrat-Thin.ttf
+          weight: 100
 
     - family: DMSans
       fonts:
-        - asset: assets/fonts/DMSans_36pt-Regular.ttf
-        - asset: assets/fonts/DMSans_24pt-Bold.ttf
-        - asset: assets/fonts/DMSans_24pt-Black.ttf
+        - asset: assets/fonts/dmsans/DMSans_36pt-Regular.ttf
+          weight: 400
+        - asset: assets/fonts/dmsans/DMSans_18pt-Bold.ttf
+          weight: 700
+        - asset: assets/fonts/dmsans/DMSans_18pt-ExtraLight.ttf
+          weight: 200
+        - asset: assets/fonts/dmsans/DMSans_18pt-Light.ttf
+          weight: 300
+        - asset: assets/fonts/dmsans/DMSans_18pt-Medium.ttf
+          weight: 500
+        - asset: assets/fonts/dmsans/DMSans_18pt-SemiBold.ttf
+          weight: 600
+        - asset: assets/fonts/dmsans/DMSans_18pt-Thin.ttf
+          weight: 100
+        - asset: assets/fonts/dmsans/DMSans_18pt-ExtraBold.ttf
+          weight: 800
+        - asset: assets/fonts/dmsans/DMSans_24pt-Black.ttf
+          weight: 900
 
     - family: MontserratAlternates
       fonts: 
-        - asset: assets/fonts/MontserratAlternates-Regular.ttf
+        - asset: assets/fonts/montserrat_alternates/MontserratAlternates-ExtraBold.ttf
+          weight: 800
+        - asset: assets/fonts/montserrat_alternates/MontserratAlternates-SemiBold.ttf
+          weight: 600
+        - asset: assets/fonts/montserrat_alternates/MontserratAlternates-Medium.ttf
+          weight: 500
+        - asset: assets/fonts/montserrat_alternates/MontserratAlternates-Bold.ttf
+          weight: 700
+        - asset: assets/fonts/montserrat_alternates/MontserratAlternates-Black.ttf
           weight: 900
+        - asset: assets/fonts/montserrat_alternates/MontserratAlternates-Regular.ttf
+          weight: 400
+        - asset: assets/fonts/montserrat_alternates/MontserratAlternates-ExtraLight.ttf
+          weight: 200
+        - asset: assets/fonts/montserrat_alternates/MontserratAlternates-Thin.ttf
+          weight: 100
+        - asset: assets/fonts/montserrat_alternates/MontserratAlternates-Light.ttf
+          weight: 300
 
 flutter_launcher_icons:
   android: "launcher_icon"
